gccida/g3/expand_stmt
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_stmt/src/c-semantics.c:1232:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_stmt/src/c-semantics.c:1237:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *size_unit; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_stmt/src/c-semantics.c:1238:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_stmt/src/c-semantics.c:1240:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_stmt/src/c-semantics.c:1243:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_stmt/src/c-semantics.c:1245:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_stmt/src/c-semantics.c:1248:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *inputs; // [rsp+0h] [rbp-58h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_stmt/src/c-semantics.c:1249:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *outputs; // [rsp+8h] [rbp-50h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_stmt/src/c-semantics.c:1287:31: error: expected expression
if ( elements != ( tree_node *)global_trees ) 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_stmt/src/c-semantics.c:1287:20: error: use of undeclared identifier 'tree_node'
if ( elements != ( tree_node *)global_trees ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_stmt/src/c-semantics.c:1393:7: error: use of undeclared identifier 'explained_1'
if ( !explained_1 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_stmt/src/c-semantics.c:1396:1: error: use of undeclared identifier 'explained_1'
explained_1 = 1; 
^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_stmt/src/obj/c-semantics.o] Error 1
